rv32c support - step1

--- a/emulator/CMakeLists.txt
+++ b/emulator/CMakeLists.txt
@@ -5,4 +5,4 @@
 
 cmake_minimum_required(VERSION 3.10)
 project(riscv)
-add_executable(rv32 main.c logger.c utils.c csr.c rv32i.c)
+add_executable(rv32 main.c logger.c utils.c csr.c rv32i.c rv32c.c)
